# dissertation-vulkan-vs-opengl

./: .gitignore  CMakeLists.txt  Dissertation.sln  VulkanBenchmark.sln  compile_gl_spirv.sh  compile_vulkan_spirv.sh
Dependencies/imgui/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  imgui_impl_glfw_vulkan.h
Infrastructure/: CMakeLists.txt  Infrastructure.vcxproj  Infrastructure.vcxproj.filters  application.cpp  application.h  ibo.h  logger.h  mesh.h  resource.h  resource_manager.h  timer.h  types.h  vbo.h  vulkan_application.cpp  vulkan_application.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_pool.cpp  vulkan_debug.cpp  vulkan_debug.h  vulkan_depth_stencil.cpp  vulkan_depth_stencil.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_physical_device.cpp  vulkan_physical_device.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_semaphore.cpp  vulkan_semaphore.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_utilities.cpp  vulkan_utilities.h  vulkan_vbo.h  vulkan_window.cpp  (+3 more)
Infrastructure/Core/: CMakeLists.txt  application.cpp  application.h  cfg.cpp  cfg.h  entity.cpp  entity.h  math_utilities.h  mesh.cpp  mesh.h  mesh_utilities.cpp  mesh_utilities.h  ncf.cpp  ncf.h  resource.h  resource_manager.h  stb_image.h  texture.h  thread_pool.cpp  thread_pool.h  types.h  vertex.h  window.h
Infrastructure/OpenGL/: CMakeLists.txt  gl_application.cpp  gl_application.h  gl_buffer.h  gl_infrastructure_context.cpp  gl_infrastructure_context.h  gl_mesh.cpp  gl_mesh.h  gl_program_pipeline.cpp  gl_program_pipeline.h  gl_render_target.cpp  gl_render_target.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_texture_sampler.cpp  gl_texture_sampler.h  gl_window.cpp  gl_window.h
Infrastructure/Vulkan/: CMakeLists.txt  mesh.cpp  vulkan_application.cpp  vulkan_application.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_pool.cpp  vulkan_command_pool.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_depth_stencil.cpp  vulkan_depth_stencil.h  vulkan_device.cpp  vulkan_device.h  vulkan_entity.cpp  vulkan_entity.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_infrastructure_context.cpp  vulkan_infrastructure_context.h  vulkan_instance.cpp  vulkan_mesh.cpp  vulkan_mesh.h  vulkan_physical_device.cpp  vulkan_physical_device.h  vulkan_pipeline_cache.cpp  vulkan_pipeline_cache.h  vulkan_query_pool.cpp  vulkan_query_pool.h  vulkan_render_pass.cpp  vulkan_render_target.cpp  vulkan_render_target.h  vulkan_renderer.h  vulkan_semaphore.cpp  vulkan_semaphore.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  (+6 more)
OpenGLBenchmarks/: CMakeLists.txt
OpenGLBenchmarks/DrawCallPerObject/: CMakeLists.txt  demo_application.cpp  demo_application.h  demo_entity.cpp  demo_entity.h  demo_material.h  demo_scene.cpp  demo_scene.h  main.cpp
OpenGLBenchmarks/DrawCallPerObject/sdr/: default.frag  default.frag.spv  default.vert.spv
OpenGLBenchmarks/DriverOverhead/: CMakeLists.txt
OpenGLBenchmarks/DriverOverhead/DrawCallCount/: CMakeLists.txt  demo_application.cpp  demo_application.h  demo_entity.cpp  demo_entity.h  demo_scene.cpp  demo_scene.h  imgui.ini  main.cpp
OpenGLBenchmarks/MultiPass/DeferredRendering/: CMakeLists.txt  demo_application.cpp  demo_application.h  demo_entity.cpp  demo_entity.h  demo_scene.cpp  demo_scene.h  imgui.ini  main.cpp
OpenGLBenchmarks/MultiPass/DeferredRendering/sdr/: deferred.frag  deferred.frag.spv  deferred.vert  deferred.vert.spv  display.frag  display.frag.spv  display.vert  display.vert.spv
VulkanBenchmark/: VulkanBenchmark.vcxproj  VulkanBenchmark.vcxproj.filters  main.cpp
VulkanBenchmarkSingleThreaded/: CMakeLists.txt  VulkanBenchmarkSingleThreaded.vcxproj  VulkanBenchmarkSingleThreaded.vcxproj.filters  demo_scene.cpp  main.cpp  vulkan_single_threaded_application.cpp  vulkan_single_threaded_application.h
VulkanBenchmarkSingleThreaded/sdr/: default.frag  default.frag.spv  default.vert  default.vert.spv
VulkanBenchmarks/: CMakeLists.txt
VulkanBenchmarks/CommandBufferRecording/: CMakeLists.txt
VulkanBenchmarks/CommandBufferRecording/MTPerFrameRecordedCommandBuffers/: CMakeLists.txt  demo_application.cpp  demo_application.h  demo_scene.cpp  demo_scene.h
VulkanBenchmarks/CommandBufferRecording/MTPrimaryCommandBuffers/: CMakeLists.txt  demo_application.cpp  demo_scene.cpp
VulkanBenchmarks/CommandBufferRecording/MTPrimaryCommandBuffers/config/: config.cfg
VulkanBenchmarks/MultiPass/: CMakeLists.txt
VulkanBenchmarks/MultiPass/DeferredRendering/: CMakeLists.txt  demo_application.cpp  demo_application.h  demo_entity.cpp  demo_entity.h  demo_scene.cpp  demo_scene.h  main.cpp
VulkanBenchmarks/MultiPass/DeferredRendering/models/: balls.fbx  balls2.fbx  trex.mtl
VulkanBenchmarks/MultiPass/DeferredRendering/sdr/: default.frag  deferred.frag  deferred.frag.spv  deferred.vert  deferred.vert.spv  display.frag  display.frag.spv  display.vert  display.vert.spv
VulkanBenchmarks/MultiPass/DeferredRendering/textures/: Map__11_Normal_Bump.tga  Map__3_Normal_Bump.tga  Map__7_Normal_Bump.tga
VulkanBenchmarks/StaticSceneLowPoly/: CMakeLists.txt  demo_scene.cpp  demo_scene.h  main.cpp  static_scene_low_poly_application.cpp  static_scene_low_poly_application.h
VulkanBenchmarks/StaticSceneLowPoly/MTPerFrameRecordedCommandBuffers/: CMakeLists.txt  demo_application.cpp  demo_application.h  demo_scene.cpp  main.cpp
VulkanBenchmarks/StaticSceneLowPoly/MTPerFrameRecordedCommandBuffers/sdr/: default.vert.spv
VulkanBenchmarks/StaticSceneLowPoly/PerFrameRecordedCommandBuffers/: CMakeLists.txt  demo_application.cpp  demo_scene.cpp  main.cpp
VulkanBenchmarks/StaticSceneLowPoly/PerFrameRecordedCommandBuffers/sdr/: default.frag.spv
VulkanBenchmarks/StaticSceneLowPoly/PreRecordedCommandBuffers/: CMakeLists.txt  demo_application.cpp  demo_entity.h  demo_material.h  demo_scene.cpp  main.cpp
VulkanBenchmarks/StaticSceneLowPoly/PreRecordedCommandBuffers/config/: config.cfg
(+56 files in other folders)
